--- a/Bookstore.html
+++ b/Bookstore.html
@@ -17,7 +17,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="index.html">
-			  <img src="/img/favicon.jpeg" alt="" width="50px" style="margin-left: 15px;">
+			  <img src="./img/favicon.jpeg" alt="" width="35px" style="margin-top: 10px; float: left;">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
 			  <div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+					  <a class="nav-link" aria-current="page" href="index.html">Home</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link" href="Blogs.html">Blogs</a>
@@ -35,10 +35,10 @@
 					  <a class="nav-link" href="Library.html">Library</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="Bookstore.html">Bookshop</a>
+					  <a class="nav-link active" href="Bookstore.html">Bookshop</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link" href="help.html">Help & Enquiries</a>
+					  <a class="nav-link" href="help.html">Helps</a>
 					</li>
 					
 				  </ul>
@@ -47,11 +47,131 @@
 		  </div>
 		</div>
 	  </nav>
-	  <div class="box">
+	   <div class="box">
 			  <h1>Deeper Life Campus Fellowship</h1>
 			  <h3>Lautech Chapter, Ogbomoso</h3>
 	  </div>
-<h3 style="color: #121d6e; margin:15px;  "><marquee direction="right">This page is under construction</marquee></h3>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	  <br>
+	  <div class="text-center">
+		<h2>Welcome to The DLCF Ogbomoso E-Library</h2>
+		<p>Unlimited access to academic, spiritual, financial, self-development and motivational resources in ebooks, videos and other digital formals.</p>
+		<br>
+		<h2>Recommended</h2>
+	  </div>
+	  <div class="books">
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+  
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+ 
+   
+    <div class="card m-2 clearfix" style="width: 12rem;">
+		<img src="./img/groupK.png" class="bkimg" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Richest man in Babylon by George Clason</h5>
+        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut?</p>
+        <a href="#" class="btn btn-primary">Download</a>
+      </div>
+    </div>
+ 
+<br><br><br><br><br><br>
+<div class="secttion">
+<div class="text-center">
+	<h1>SECTIONS</h1>
+</div>
+<br>
+<div class="border border-dark">
+	<div class="text-center">
+		<h1>Spiritual</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+	<br>
+	<div class="text-center">
+		<h1>Academic</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+	<br>
+	<div class="text-center">
+		<h1>Financial/Motivational</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+	<br>
+	<div class="text-center">
+		<h1>Skills Acquisition/Self Development</h1>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati corrupti aspernatur quae expedita atque voluptatum.</p>
+		<a href="#" class="btn btn-danger col-md-1">Click here</a>
+	</div>
+</div>
+</div>
+<br>
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+<footer>
+		<p>Copyright © DEEPER LIFE CAMPUS FELLOWSHIP <br>Ogbomoso, Lautech. <br>2022</p>
+</footer>
 </html>
