--- a/Blogs.html
+++ b/Blogs.html
@@ -55,8 +55,8 @@
 
 <br>
 
-	<nav aria-label="...">
-  <ul class="pagination justify-content-center" style="margin: 20px o;">
+	<nav aria-label="..." class="pagination-widh">
+  <ul class="pagination justify-content-center" style="margin: 20px 0;">
     <li class="page-item disabled">
       <a class="page-link" href="#">Previous</a>
     </li>
@@ -262,7 +262,7 @@ WHERE WILL YOU SPEND ETERNITY?
 #Day6of7</p>
 					   </div>
 					   <br>
-	<nav aria-label="..." class="pagination-width">
+	<nav aria-label="..." class="paginaion-width">
   <ul class="pagination justify-content-center" style="margin: 20px 0;">
     <li class="page-item">
       <a class="page-link" href="#">Previous</a>
